fix compile issue

--- a/llvm/unittests/PP2/CMakeLists.txt
+++ b/llvm/unittests/PP2/CMakeLists.txt
@@ -1,3 +1,7 @@
+include_directories(
+  ${CMAKE_SOURCE_DIR}/lib/Target/X86
+  ${CMAKE_BINARY_DIR}/lib/Target/X86
+)
 
 set(LLVM_LINK_COMPONENTS 
   Support 
@@ -6,8 +10,8 @@ set(LLVM_LINK_COMPONENTS
   MIRParser
   CodeGen
   Target
-  X86AsmParser
   X86CodeGen
+  X86AsmParser
   X86Desc
   X86Info
   MC
